[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/KeySelect.gd" id="3"]
[ext_resource type="Theme" uid="uid://cvs3ru70gnho3" path="res://addons/fart_engine/Database_Manager/Theme and Style/main_15.tres" id="7"]

[node name="KeySelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("3")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="DropPanelContainer" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -88.0
offset_right = 276.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_layout_mode = 1

[node name="LeftMargin" type="Label" parent="DropPanelContainer"]
offset_right = 1.0
offset_bottom = 191.0
size_flags_vertical = 3

[node name="MainNodes" type="VBoxContainer" parent="DropPanelContainer"]
offset_left = 5.0
offset_right = 547.0
offset_bottom = 191.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopMargin" type="Label" parent="DropPanelContainer/MainNodes"]
offset_right = 542.0
offset_bottom = 23.0
size_flags_vertical = 1

[node name="Label" type="Label" parent="DropPanelContainer/MainNodes"]
offset_top = 27.0
offset_right = 542.0
offset_bottom = 52.0
theme = ExtResource("7")
text = "Press the key you wish to assign for "
horizontal_alignment = 1

[node name="Label2" type="Label" parent="DropPanelContainer/MainNodes"]
offset_top = 56.0
offset_right = 542.0
offset_bottom = 81.0
theme = ExtResource("7")
text = "move up"
horizontal_alignment = 1
uppercase = true

[node name="Label3" type="Label" parent="DropPanelContainer/MainNodes"]
offset_top = 85.0
offset_right = 542.0
offset_bottom = 110.0
theme = ExtResource("7")
text = "Press Desired Mouse, Keyboard, or Joystick Button"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="DropPanelContainer/MainNodes"]
offset_left = 221.0
offset_top = 114.0
offset_right = 321.0
offset_bottom = 164.0
size_flags_horizontal = 4
theme = ExtResource("7")

[node name="Accept" type="Button" parent="DropPanelContainer/MainNodes/Buttons"]
visible = false
custom_minimum_size = Vector2i(100, 50)
offset_right = 100.0
offset_bottom = 50.0
size_flags_vertical = 4
theme_override_font_sizes/font_size = 15
text = "Accept"

[node name="Reset" type="Button" parent="DropPanelContainer/MainNodes/Buttons"]
visible = false
custom_minimum_size = Vector2i(100, 50)
offset_left = 104.0
offset_right = 204.0
offset_bottom = 50.0
size_flags_vertical = 4
theme_override_font_sizes/font_size = 15
text = "Reset"

[node name="Cancel" type="Button" parent="DropPanelContainer/MainNodes/Buttons"]
custom_minimum_size = Vector2i(100, 50)
offset_right = 100.0
offset_bottom = 50.0
size_flags_vertical = 4
text = "Cancel"

[node name="BottomMargin" type="Label" parent="DropPanelContainer/MainNodes"]
offset_top = 168.0
offset_right = 542.0
offset_bottom = 191.0
size_flags_vertical = 1

[node name="RightMargin" type="Label" parent="DropPanelContainer"]
offset_left = 551.0
offset_right = 552.0
offset_bottom = 191.0
size_flags_vertical = 3

[connection signal="button_up" from="DropPanelContainer/MainNodes/Buttons/Accept" to="." method="_on_Accept_button_up"]
[connection signal="button_up" from="DropPanelContainer/MainNodes/Buttons/Reset" to="." method="_on_reset_button_up"]
[connection signal="button_down" from="DropPanelContainer/MainNodes/Buttons/Cancel" to="." method="_on_cancel_button_down"]
[connection signal="button_up" from="DropPanelContainer/MainNodes/Buttons/Cancel" to="." method="_on_Cancel_button_up"]
